# gameengine

./: .gitignore  Cargo.toml  build.sh
cengine/: CMakeLists.txt
cengine/src/: main.c
cengine_rust/: Cargo.toml
cengine_rust/src/: basic_lighting.rs  c.rs  helper_functions.rs  lib.rs  text_renderer.rs  texture_renderer.rs
core/cameras/: Cargo.toml
core/cameras/src/: orbit_camera.rs
core/cengine/: CMakeLists.txt
core/cengine/src/: main.c
core/math/src/: lib.rs  mat4.rs  quat.rs  rect.rs  vec3.rs
core/renderers/: Cargo.toml  build.rs
core/renderers/src/: c.rs  helper_functions.rs  lib.rs  lit_renderer.rs  simple_mesh.rs  text_renderer.rs  texture_renderer.rs
main/: Cargo.toml
main/src/: compile.rs  main.rs  visual_scripting.rs
math/src/: lib.rs  mat4.rs  texture.rs
node_script/: Cargo.toml
node_script/src/: node.rs
ui/: Cargo.toml
ui/src/: anchor_rect.rs  lib.rs  widget.rs
